#Payment commit
Для разделения автризации пользователей в сервисе payment:
- обавлена логика контроллеров.
- обавлена логика сервисов.
- добавлена обратотка авторизованных запросов баланса и платежей.
